# acs-ari

./: ProjectHome.md
ARI/ICS/ARC/doc/: conf.py  example.rst  getting_started.rst  index.rst
ARI/ICS/ARC/doc/_templates/: layout.html
ARI/ICS/ARC/src/: setup.py
ARI/ICS/ARC/src/arcpy/: arc_params.py  arcpy.py
ARI/ICS/SHAPI/src/: CMakeLists.txt  CUSBSA.cpp  Makefile  README  SHLAPI.i  SHLAPI.py  SHManager.py  main.cpp
ARI/OCS/ObservingModes/src/: arcModes.py  map_beam.py  obsmodes.py  pointing_scan.py  srt_pointing.py  sun_vis.py  track_sun_arc.py
ARI/TCS/pySRT/src/: SRT1_control_libV02.py  SRT2_control_libV02.py  SRT_control_libV03.py  parameters_srt1.py  parameters_srt2.py  sources.py
ARI/TCS/rpiSRT/: parametersV01.py
ARI/TCS/rpiSRT/idl/: SRT.ice  SRTcontrol.ice  update
ARI/TCS/rpiSRT/idl/ROACH/: update
ARI/TCS/rpiSRT/idl/SH/: update
ARI/TCS/rpiSRT/idl/SRT/: SRTcontrol_ice.py
ARI/TCS/rpiSRT/idl/SRT/Demo/: __init__.py
ARI/TCS/rpiSRT/idl/SRT/SRTControl/: __init__.py
ARI/TCS/rpiSRT/src/: SRTClient.py
ARI/TCS/rpiSRT/src/clients/ROACH_client/: ROACHControlClient.py  ROACHcontrol_ice.py
ARI/TCS/rpiSRT/src/clients/SH_client/: SHcontrol_ice.py
ARI/TCS/rpiSRT/src/clients/SRT_client/: IceConfig  SRTControlClient1.py  SRTcontrolServer.py  SRTcontrol_ice.py  sites.py
ARI/TCS/rpiSRT/src/iceROACH/: ROACHcontrolServer.py
ARI/TCS/rpiSRT/src/iceSH/: SHcontrolServer.py
ARI/TCS/rpiSRT/src/iceSH/SHControl/: __init__.py
ARI/TCS/rpiSRT/src/iceSRT/: GP3.py  SRTControlClient1.py  SRT_control_libV02.py  SRT_control_lib_test.py  SRTcontrol.ice  SRTcontrolServer.py  srt_receiver.py
ARI/TCS/rpiSRT/src/observingModes/: IceSRTClient.ice  IceSRTClient.py  obsmode.py
ARI/TCS/rpiSRT/src/obsolete/: SRTServer.py  SRT_ice.py  SRT_serial_sim.py  SRTcontrolServer.py
ARI/TCS/srtDevice/: .classpath  .project
ARI/TCS/srtDevice/idl/: srt.ice
ARI/TCS/srtDevice/src/ari/srt/: SrtControl.java
trunk/ARI/ICS/ARC/doc/: Makefile  intro.rst
trunk/ARI/ICS/ARC/src/arcpy/: arc_params.py  arcpy.py
trunk/ARI/ICS/SHAPI/src/: CUSBSA.h  CUSBSA.i  Makefile  SHLAPI.py  SHManager.py  main.cpp
trunk/ARI/OCS/ObservingModes/src/: arcModes.py  map_beam.py  pointing_scan.py  sh_modes.py  srt_pointing.py  sun_vis.py  track_sun_arc.py
trunk/ARI/TCS/pySRT/src/: SRT1_control_libV02.py  SRT2_control_libV02.py  SRT_control_libV03.py  parameters_srt1.py  sources.py
trunk/ARI/TCS/rpiSRT/: SRT_serial_sim.py
trunk/ARI/TCS/rpiSRT/idl/: SRTcontrol_ice.py
trunk/ARI/TCS/rpiSRT/idl/SH/: SHcontrol_ice.py
trunk/ARI/TCS/rpiSRT/idl/SRT/: SRTcontrol.ice  update
trunk/ARI/TCS/rpiSRT/src/: SRTClient.py  SRTServer.py  SRT_control_libV02.py
trunk/ARI/TCS/rpiSRT/src/clients/ROACH_client/: ROACHcontrol.ice
trunk/ARI/TCS/rpiSRT/src/clients/ROACH_client/ROACHControl/: __init__.py
trunk/ARI/TCS/rpiSRT/src/clients/SH_client/: SHControlClient.py
trunk/ARI/TCS/rpiSRT/src/clients/SRT_client/: SRTControlClient1.py  srt_receiver.py
trunk/ARI/TCS/rpiSRT/src/iceROACH/: ROACHcontrol_ice.py
trunk/ARI/TCS/rpiSRT/src/iceSH/: SHcontrol.ice  SHcontrolServer.py
trunk/ARI/TCS/rpiSRT/src/iceSRT/: SRTControlClient1.py  SRT_control_lib_test.py  SRT_serial_sim.py  SRTcontrolServer.py  SRTcontrol_ice.py  parametersV01.py
trunk/ARI/TCS/rpiSRT/src/observingModes/: IceSRTClient.ice  IceSRTClient.py  IceSRTClient_ice.py  obsmode.py  sites.py
trunk/ARI/TCS/rpiSRT/src/observingModes/SRTClient/: __init__.py
trunk/ARI/TCS/rpiSRT/src/obsolete/: SRT_control_libV02.py  SRTcontrol_ice.py  parametersV01.py
trunk/ARI/TCS/srtDevice/: .classpath
trunk/ARI/TCS/srtDevice/src/ari/srt/: SrtDevice.java  SrtSerialDriver.java
trunk/ARI/TCS/srtDevice/src/ari/srt/test/: CommandSender.java
